--- a/style.css
+++ b/style.css
@@ -1,5 +1,27 @@
 .topnav {
   background-color: #FF0000;
   text-align: center;
-  padding: 20 px 
+  padding: 20px 20px 
+}
+
+body {
+  background-color: lightblue;
+}
+
+h1, h2{
+  color: white;
+  text-align: center;
+}
+
+p {
+  font-family: verdana;
+  font-size: 20px;
+}
+
+input {
+  width: 50%;
+  padding: 5px 20px;
+  margin: 8px 0;
+  background-color: #3CBC8D;
+  color: white;
 }
